--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Jagan Vishal P – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portfolio of Jagan Vishal P, Entry-Level Software Developer skilled in Java, Python, SQL, HTML, CSS, and MySQL." />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
   <style>
     :root {
       --bg: #0f172a;
@@ -592,14 +596,14 @@ body.modal-open {
         <div>
           <h1>JAGAN VISHAL P</h1>
           <p class="role">Entry-Level Software Developer</p> 
-          <p class="role">BCA (Distance Education)</p>
+          <p class="role">BCA (Distance Education) <i class="fas fa-graduation-cap"></i></p>
         </div>
         <div class="contact">
-          <span>Mannargudi, Thiruvarur District, 614001</span>
-          <span>📞 <a href="tel:7339448487">7339448487</a></span>
-          <span>📧 <a href="mailto:jaganvishal007@gmail.com">jaganvishal007@gmail.com</a></span>
-          <span>🔗 <a href="https://www.linkedin.com/in/jaganvishal-432836268" target="_blank">LinkedIn</a></span>
-          <span>🔗 <a href="https://github.com/settings/profile" target="_blank">GitHub</a></span>
+          <span><i class="fas fa-location-dot"></i> Mannargudi, Thiruvarur District, 614001</span>
+          <span><i class="fas fa-phone"></i> <a href="tel:7339448487">7339448487</a></span>
+          <span><i class="fas fa-envelope"></i> <a href="mailto:jaganvishal007@gmail.com">jaganvishal007@gmail.com</a></span>
+          <span><i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/jaganvishal-432836268" target="_blank">LinkedIn</a></span>
+          <span><i class="bi bi-github"></i> <a href="https://github.com/settings/profile" target="_blank">GitHub</a></span>
         </div>
       </div>
 
